# r_t_y_b

./: .dockerignore  .env  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  ARCHIVE.md  Cargo.toml  Dockerfile  README.md  checklist.md  docker-compose.dev.yml  docker-compose.yml  package.json  render.yaml  rustfmt.toml  turbo.json
.githooks/: pre-commit
.github/workflows/: deploy-vps.yml  rust.yml
asp_net/: Program.cs  README.md
asp_net.Tests/: AppStateTests.cs  AspNetTodoApi.Tests.csproj  AuthContextHelperTests.cs
asp_net/Contracts/: Requests.cs
asp_net/Endpoints/: AiEndpoints.cs  AuthEndpoints.cs  DocumentationEndpoints.cs  SystemEndpoints.cs  TodoEndpoints.cs  UserEndpoints.cs
asp_net/Models/: TodoItem.cs  User.cs
asp_net/Services/: AppState.cs  AuthContextHelper.cs
back-end/: .env  .env.develop  .env.example  .env.production  Cargo.toml  package.json
back-end/migrations/: 0002_password_resets.sql  0003_kanban_todos.sql  0004_assignable_todos.sql  0005_rbac_roles.sql
back-end/src/: error.rs  lib.rs  locale.rs  main.rs  state.rs
back-end/src/controllers/: ai_controller.rs  auth_controller.rs  health_controller.rs  mod.rs  system_controller.rs  todo_controller.rs  todo_realtime_controller.rs  user_controller.rs
back-end/src/controllers/extractors/: auth.rs
back-end/src/models/: ai.rs  auth.rs  mod.rs  todo.rs
back-end/src/services/: ai_service.rs  auth_service.rs  mod.rs  todo_realtime_service.rs  todo_service.rs  user_service.rs
back-end/tests/: auth_integration.rs
bun_hono/: package.json  tsconfig.json
bun_hono/src/: index.ts
bun_hono/src/config/: db.ts  env.ts  state.ts  (+1 more)
deploy/: DEPLOY_GUIDE.md  docker-compose.vps.yml
dotnet/: README.md
front-end/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts
front-end/e2e/: app.spec.ts
front-end/src/: App.tsx  index.css  main.tsx
migrations/: 0001_init.sql
scripts/: deploy_vps.sh  setup-git-hooks.sh
src/: error.rs  main.rs  state.rs
src/controllers/: auth_controller.rs  docs_controller.rs  health_controller.rs  todo_controller.rs
src/models/: auth.rs
src/services/: auth_service.rs  email_service.rs  mod.rs  todo_service.rs
tests/: auth_integration.rs
(+52 files in other folders)
